--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -1,6 +1,7 @@
 export VISUAL=nano
 export EDITOR=nano
 export LC_ALL=C.UTF-8
+export PATH=$HOME/.local/bin:$PATH
 
 if [ -f "$HOME/.cargo/env" ]; then
 	. "$HOME/.cargo/env"
